--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,4 +45,10 @@
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
+	<jsp-config>
+		<taglib>
+			<taglib-uri>/exam</taglib-uri>
+			<taglib-location>/WEB-INF/tag.tld</taglib-location>
+		</taglib>
+	</jsp-config>
 </web-app>
